--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "techdegree-project-6",
   "version": "1.0.0",
   "description": "## CONTENTS OF THIS FILE",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
