--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/WebDevBrum/TechDegree-Project-6.git"
   },
+  "engines": {
+    "node":"12.18.0"
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
